# datparser-py

./: Makefile  README.md  README.rst  main.py  pyproject.toml  setup.py
datparser/: __init__.py  datparser.py  datparser.pyx  setup.py
src/: __init__.py  datparser.py
src/datparser/: __init__.py
tests/: conftest.py  test_data_classes.py  test_datparser.py  test_esrp_file.py  test_esrp_parser.py
