[tool.poetry]
name = "datparser"
version = "0.1.0"
description = ""
authors = ["savaleriy"]

[tool.poetry.dependencies]
python = "^3.10"
pyright = "^1.1.393"
pandas = "^2.2.3"
numpy = "^2.2.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
Cython = "^0.29.34"

[build-system]
requires = ["setuptools>=42", "wheel", "Cython"]
build-backend = "setuptools.build_meta"
